fix: height of projexts card and visibility of logout-btn in nav or menu

--- a/src/blocks/blog-blocks/project/project.css
+++ b/src/blocks/blog-blocks/project/project.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   position: relative;
   width: 100%;
-  height: fit-content;
+  min-height: 225px;
+  max-height: 320px;
+
   /* animation: ani 2s ease; */
 }
 /* 
