--- a/src/blocks/znac-blocks/logout-btn/logout-btn.css
+++ b/src/blocks/znac-blocks/logout-btn/logout-btn.css
@@ -31,9 +31,3 @@
     margin-left: 30px;
   }
 }
-
-@media screen and (max-width: 700px) {
-  .logout-btn {
-    margin: 0;
-  }
-}
