--- a/src/blocks/znac-blocks/menu/__link/menu__link.css
+++ b/src/blocks/znac-blocks/menu/__link/menu__link.css
@@ -1,15 +1,16 @@
 .menu__link {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 19px;
-    color: #E8E8E8;
-    background-color: transparent;
-    border-style: none;
-    margin: 0 0 25px;
-    transition: opacity .2s ease;
-    cursor: pointer;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  color: #e8e8e8;
+  background-color: transparent;
+  border-style: none;
+  margin: 0 0 25px;
+  transition: opacity 0.2s ease;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .menu__link:hover {
-    opacity: .7;
+  opacity: 0.7;
 }
